--- a/Index.html
+++ b/Index.html
@@ -156,7 +156,17 @@
       <a href="https://drive.google.com/drive/u/0/folders/1pFNhQ2G8fAEgzRlessQUAG7Ctio19Day" 
          target="_blank" class="btn">
          View Certificate
-      </a>
+      </a> 
+    </div>
+
+      <div class="cert-card">
+      <img src="assets/cert-placeholder.png" alt="Certificate">
+      <h4>Web Development</h4>
+      <p>Course/Event/Quiz</p>
+      <a href="https://drive.google.com/drive/u/0/folders/1pFNhQ2G8fAEgzRlessQUAG7Ctio19Day" 
+         target="_blank" class="btn">
+         View Certificate
+      </a> 
     </div>
 
     <!-- Certificate - Web Development -->
