--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
 </head>
 <body>
 
+<!-- Mobile Menu Button -->
+<button class="mobile-menu-btn" id="mobileMenuBtn">
+  <i class="fa fa-bars"></i>
+</button>
+
 <!-- Sidebar Navigation -->
-<nav class="sidebar w3-hide-small fade-in">
+<nav class="sidebar w3-hide-small fade-in" id="sidebar">
   <a href="#home"><i class="fa fa-home"></i><p>HOME</p></a>
   <a href="#about"><i class="fa fa-user"></i><p>ABOUT</p></a>
   <a href="#skills"><i class="fa fa-code"></i><p>SKILLS</p></a>
@@ -132,14 +137,11 @@
 <!-- Certifications -->
 <section id="certifications" class="fade-in section-left">
   <h2>Certifications And Training</h2><hr>
-    
-    <hr>
 
   <div class="cert-grid">
 
     <!-- Certificate - Automation Testing -->
     <div class="cert-card">
-      <img src="assets/cert-placeholder.png" alt="Certificate">
       <h4>Internship</h4>
       <p>College trainiong Programm</p>
       <a href="https://drive.google.com/drive/u/0/folders/1wyHfx2bbwG3uF_0tZl5KQb3brKZJGXxV" 
@@ -150,7 +152,6 @@
 
     <!-- Certificate - Python Specialization -->
     <div class="cert-card">
-      <img src="assets/cert-placeholder.png" alt="Certificate">
       <h4>Web Development</h4>
       <p>Course/Event/Quiz</p>
       <a href="https://drive.google.com/drive/u/0/folders/1pFNhQ2G8fAEgzRlessQUAG7Ctio19Day" 
@@ -160,7 +161,6 @@
     </div>
 
       <div class="cert-card">
-      <img src="assets/cert-placeholder.png" alt="Certificate">
       <h4>Web Development</h4>
       <p>Course/Event/Quiz</p>
       <a href="https://drive.google.com/drive/u/0/folders/1pFNhQ2G8fAEgzRlessQUAG7Ctio19Day" 
@@ -171,7 +171,6 @@
 
     <!-- Certificate - Web Development -->
     <div class="cert-card">
-      <img src="assets/cert-placeholder.png" alt="Certificate">
       <h4>Cyber Security</h4>
       <p>Course/Event/Quiz</p>
       <a href="https://drive.google.com/drive/u/0/folders/11TskxxjayjUxwgZHA7wKZw0N6wf2kbtx" 
