--- a/index.html
+++ b/index.html
@@ -178,7 +178,35 @@
          View Certificate
       </a>
     </div>
+<!-- Certificate - Web Development -->
+    <div class="cert-card">
+      <h4>Cyber Security</h4>
+      <p>Course/Event/Quiz</p>
+      <a href="https://drive.google.com/drive/u/0/folders/11TskxxjayjUxwgZHA7wKZw0N6wf2kbtx" 
+         target="_blank" class="btn">
+         View Certificate
+      </a>
+    </div>
 
+    <!-- Certificate - Web Development -->
+    <div class="cert-card">
+      <h4>Cyber Security</h4>
+      <p>Course/Event/Quiz</p>
+      <a href="https://drive.google.com/drive/u/0/folders/11TskxxjayjUxwgZHA7wKZw0N6wf2kbtx" 
+         target="_blank" class="btn">
+         View Certificate
+      </a>
+    </div>
+
+    <!-- Certificate - Web Development -->
+    <div class="cert-card">
+      <h4>Cyber Security</h4>
+      <p>Course/Event/Quiz</p>
+      <a href="https://drive.google.com/drive/u/0/folders/11TskxxjayjUxwgZHA7wKZw0N6wf2kbtx" 
+         target="_blank" class="btn">
+         View Certificate
+      </a>
+    </div>
   </div>
 </section>
 
@@ -194,9 +222,7 @@
 <section class="fade-in section-left">
   <h2>GitHub Stats</h2><hr>
   <div class="github-grid">
-    <img src="https://github-readme-stats.vercel.app/api?username=kuro-shiv&show_icons=true&theme=tokyonight">
     <img src="https://github-readme-streak-stats.herokuapp.com/?user=kuro-shiv&theme=tokyonight">
-    <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=kuro-shiv&layout=compact&theme=tokyonight">
   </div>
 </section>
 
@@ -205,8 +231,22 @@
   <h2>Contact Me</h2><hr>
   <p><b>Let's connect — always open to exciting work & collabs!</b></p>
 
-  <p>Email: <a href="mailto:dubeysk2003@gmail.com">dubeysk2003@gmail.com</a></p>
-  <p>WhatsApp: <a href="https://wa.me/918299142475" target="_blank">+91 8299142475</a></p>
+  <div class="contact-info">
+    <div class="contact-item">
+      <div class="contact-header">
+        <i class="fa fa-envelope"></i>
+        <span class="label">Email</span>
+      </div>
+      <a href="mailto:dubeysk2003@gmail.com">dubeysk2003@gmail.com</a>
+    </div>
+    <div class="contact-item">
+      <div class="contact-header">
+        <i class="fa fa-whatsapp"></i>
+        <span class="label">WhatsApp</span>
+      </div>
+      <a href="https://wa.me/918299142475" target="_blank">+91 8299142475</a>
+    </div>
+  </div>
 
   <div class="social-icons">
     <a href="https://www.linkedin.com/in/shivam-kumar-dubey-970a87248" target="_blank"><i class="fa fa-linkedin"></i></a>
