--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 <section class="fade-in section-left">
   <h2>GitHub Stats</h2><hr>
   <div class="github-grid">
-    <img src="https://github-readme-streak-stats.herokuapp.com/?user=kuro-shiv&theme=tokyonight">
+    <img src="https://github-readme-streak-stats.herokuapp.com/?user=kuro-shiv&theme=tokyonight" style="width: 50%;"">
   </div>
 </section>
 
@@ -235,17 +235,17 @@
     <div class="contact-item">
       <div class="contact-header">
         <i class="fa fa-envelope"></i>
-        <span class="label">Email</span>
-      </div>
+        <span class="label">Email: </span>
+      
       <a href="mailto:dubeysk2003@gmail.com">dubeysk2003@gmail.com</a>
-    </div>
+  </div>  </div>
     <div class="contact-item">
       <div class="contact-header">
         <i class="fa fa-whatsapp"></i>
-        <span class="label">WhatsApp</span>
-      </div>
+        <span class="label">WhatsApp: </span>
+     
       <a href="https://wa.me/918299142475" target="_blank">+91 8299142475</a>
-    </div>
+   </div>  </div>
   </div>
 
   <div class="social-icons">
