--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 <!-- RESUME -->
 <section class="fade-in">
-  <h2>Resume</h2>
+  <h2>Resume</h2><br>
   <a href="assets/Shivam_KumarDubey_Resume.pdf" class="btn" download><i class="fa fa-download"></i> Download Resume</a>
 </section>
 
@@ -201,7 +201,7 @@
 <section class="fade-in">
 <h2>GitHub Stats</h2>
 <div class="github-grid">
-<img src="https://github-readme-streak-stats.herokuapp.com/?user=kuro-shiv&theme=tokyonight" alt="GitHub Streak Stats">
+<img src="https://github-readme-streak-stats.herokuapp.com/?user=kuro-shiv&theme=tokyonight" alt="GitHub Streak Stats" style="width: 50%;">
 </div>
 </section>
 
