some project added

--- a/index.html
+++ b/index.html
@@ -97,20 +97,22 @@
     <p>Mental wellness platform for mood tracking & balance.</p>
     <div class="tech-badges"><span>React</span><span>Node</span><span>MongoDB</span></div>
     <a href="https://github.com/kuro-shiv/sno-relax-client" target="_blank" class="btn-project">GitHub</a>
+    <a href="https://sno-relax-client.vercel.app/" target="_blank" class="btn-Demo">Demo</a>
   </div>
 
   <div class="project-card">
-    <h3>🌍 GDG Solution Challenge</h3>
-    <p>Tech for social good aligned with SDG goals.</p>
+    <h3>🌍 Web Devlopment</h3>
+    <p>Over the time working on devloping my skill over different web application projects</p>
     <div class="tech-badges"><span>Next.js</span><span>Firebase</span></div>
-    <a href="https://github.com/kuro-shiv/GDG-solution-Challenge" target="_blank" class="btn-project">GitHub</a>
+    <a href="https://github.com/kuro-shiv/Web_Devlopment" target="_blank" class="btn-project">GitHub</a>
+    <a href="https://kuro-shiv.github.io/Web_Devlopment/" target="_blank" class="btn-Demo">Demo</a>
   </div>
 
   <div class="project-card">
     <h3>⚙ Python Automation</h3>
     <p>Automating repetitive workflows & testing tasks.</p>
     <div class="tech-badges"><span>Python</span><span>Selenium</span></div>
-    <a href="https://github.com/kuro-shiv/Python" target="_blank" class="btn-project">GitHub</a>
+    <a href="https://github.com/kuro-shiv/Summer-Bootcamp-Training-Project" target="_blank" class="btn-project">GitHub</a>
   </div>
 </section>
 
@@ -201,7 +203,7 @@
 <section class="fade-in">
 <h2>GitHub Stats</h2>
 <div class="github-grid">
-<img src="https://github-readme-streak-stats.herokuapp.com/?user=kuro-shiv&theme=tokyonight" alt="GitHub Streak Stats" style="width: 50%;">
+<img src="https://github-readme-streak-stats.herokuapp.com/?user=kuro-shiv&theme=tokyonight" alt="GitHub Streak Stats loading" style="width: 50%;">
 </div>
 </section>
 
@@ -213,14 +215,14 @@
   <div class="contact-info">
     <div class="contact-item">
       <div class="contact-header">
-        <i class="fa fa-envelope"></i><span class="label">Email</span>
+        <i class="fa fa-envelope"></i><span class="label"> Email</span>
       </div>
       <a href="mailto:dubeysk2003@gmail.com">dubeysk2003@gmail.com</a>
     </div>
 
     <div class="contact-item">
       <div class="contact-header">
-        <i class="fa fa-whatsapp"></i><span class="label">WhatsApp</span>
+        <i class="fa fa-whatsapp"></i><span class="label"> WhatsApp</span>
       </div>
       <a href="https://wa.me/918299142475" target="_blank">+91 8299142475</a>
     </div>
