--- a/index.html
+++ b/index.html
@@ -177,18 +177,48 @@
   <div class="cert-grid">
     <div class="cert-card">
       <h4>Internship Training</h4>
-      <p>Automation Testing</p>
+      <p>Learning Certification By IBM</p>
       <a href="https://drive.google.com/drive/u/0/folders/1wyHfx2bbwG3uF_0tZl5KQb3brKZJGXxV" class="btn" target="_blank">View</a>
     </div>
     <div class="cert-card">
       <h4>Web Development</h4>
-      <p>Frontend Training</p>
+      <p>Frontend Website</p>
       <a href="https://drive.google.com/drive/u/0/folders/1pFNhQ2G8fAEgzRlessQUAG7Ctio19Day" class="btn" target="_blank">View</a>
     </div>
     <div class="cert-card">
       <h4>Cyber Security</h4>
       <p>Learning Certification</p>
       <a href="https://drive.google.com/drive/u/0/folders/11TskxxjayjUxwgZHA7wKZw0N6wf2kbtx" class="btn" target="_blank">View</a>
+    </div>
+    <div class="cert-card">
+      <h4>Data Science</h4>
+      <p>Learning Certification</p>
+      <a href="https://drive.google.com/drive/u/0/folders/1sEHh9fQDV2kPF6V9P8ac09P5HhsVmbry" class="btn" target="_blank">View</a>
+    </div>
+    <div class="cert-card">
+      <h4>Event</h4>
+      <p>Event participation Learning Certification</p>
+      <a href="https://drive.google.com/drive/u/0/folders/1sEHh9fQDV2kPF6V9P8ac09P5HhsVmbry" class="btn" target="_blank">View</a>
+    </div>
+    <div class="cert-card">
+      <h4>Virtual internship</h4>
+      <p>Job Simulation Certification</p>
+      <a href="https://drive.google.com/drive/u/0/folders/1KKLFyP9ZK-a0UVXYd9tbCN13-GL6cStm" class="btn" target="_blank">View</a>
+    </div>
+    <div class="cert-card">
+      <h4>Hackathon</h4>
+      <p>Hackathon Certification</p>
+      <a href="https://drive.google.com/drive/u/0/folders/14mgaMVhqQJohg07DYDI5JKS3-s7R8cY9" class="btn" target="_blank">View</a>
+    </div>
+    <div class="cert-card">
+      <h4>Hackathon</h4>
+      <p>Hackathon Certification</p>
+      <a href="https://drive.google.com/drive/u/0/folders/14mgaMVhqQJohg07DYDI5JKS3-s7R8cY9" class="btn" target="_blank">View</a>
+    </div>
+    <div class="cert-card">
+      <h4>Web Devlopment</h4>
+      <p>Web Devlopment Certification</p>
+      <a href="https://drive.google.com/drive/u/0/folders/1pFNhQ2G8fAEgzRlessQUAG7Ctio19Day" class="btn" target="_blank">View</a>
     </div>
   </div>
 </section>
