--- a/index.html
+++ b/index.html
@@ -233,7 +233,9 @@
 <section class="fade-in">
 <h2>GitHub Stats</h2>
 <div class="github-grid">
-<img src="https://github-readme-streak-stats.herokuapp.com/?user=kuro-shiv&theme=tokyonight" alt="GitHub Streak Stats loading" style="width: 70%;">
+<img src="https://github-readme-stats.vercel.app/api?username=shivamdubey023&show_icons=true&theme=tokyonight" alt="GitHub Streak Stats loading" style="width: 50%; height: 30%;">
+<img src="https://github-readme-streak-stats.herokuapp.com/?user=kuro-shiv&theme=tokyonight" alt="GitHub Streak Stats loading" style="width: 50%; height: 30%;">
+<img src="https://github-readme-stats.vercel.app/api/top-langs/?username=shivamdubey023&layout=compact&theme=tokyonight" alt="GitHub Streak Stats loading" style="width: 50%; height: 30%;">
 </div>
 </section>
 
