tweak and git change

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <h3>🧘 Sno Relax</h3>
     <p>Mental wellness platform for mood tracking & balance.</p>
     <div class="tech-badges"><span>React</span><span>Node</span><span>MongoDB</span></div>
-    <a href="https://github.com/kuro-shiv/sno-relax-client" target="_blank" class="btn-project">GitHub</a>
+    <a href="https://github.com/shivamdubey023/sno-relax-client" target="_blank" class="btn-project">GitHub</a>
     <a href="https://sno-relax-client.vercel.app/" target="_blank" class="btn-Demo">Demo</a>
   </div>
 
@@ -104,15 +104,15 @@
     <h3>🌍 Web Devlopment</h3>
     <p>Over the time working on devloping my skill over different web application projects</p>
     <div class="tech-badges"><span>Next.js</span><span>Firebase</span></div>
-    <a href="https://github.com/kuro-shiv/Web_Devlopment" target="_blank" class="btn-project">GitHub</a>
-    <a href="https://kuro-shiv.github.io/Web_Devlopment/" target="_blank" class="btn-Demo">Demo</a>
+    <a href="https://github.com/shivamdubey023/Web_Devlopment" target="_blank" class="btn-project">GitHub</a>
+    <a href="https://shivamdubey023.github.io/Web_Devlopment/" target="_blank" class="btn-Demo">Demo</a>
   </div>
 
   <div class="project-card">
     <h3>⚙ Python Automation</h3>
     <p>Automating repetitive workflows & testing tasks.</p>
     <div class="tech-badges"><span>Python</span><span>Selenium</span></div>
-    <a href="https://github.com/kuro-shiv/Summer-Bootcamp-Training-Project" target="_blank" class="btn-project">GitHub</a>
+    <a href="https://github.com/shivamdubey023/Summer-Bootcamp-Training-Project" target="_blank" class="btn-project">GitHub</a>
   </div>
 </section>
 
@@ -211,11 +211,6 @@
       <a href="https://drive.google.com/drive/u/0/folders/14mgaMVhqQJohg07DYDI5JKS3-s7R8cY9" class="btn" target="_blank">View</a>
     </div>
     <div class="cert-card">
-      <h4>Hackathon</h4>
-      <p>Hackathon Certification</p>
-      <a href="https://drive.google.com/drive/u/0/folders/14mgaMVhqQJohg07DYDI5JKS3-s7R8cY9" class="btn" target="_blank">View</a>
-    </div>
-    <div class="cert-card">
       <h4>Web Devlopment</h4>
       <p>Web Devlopment Certification</p>
       <a href="https://drive.google.com/drive/u/0/folders/1pFNhQ2G8fAEgzRlessQUAG7Ctio19Day" class="btn" target="_blank">View</a>
@@ -234,7 +229,7 @@
 <h2>GitHub Stats</h2>
 <div class="github-grid">
 <img src="https://github-readme-stats.vercel.app/api?username=shivamdubey023&show_icons=true&theme=tokyonight" alt="GitHub Streak Stats loading" style="width: 50%; height: 30%;">
-<img src="https://github-readme-streak-stats.herokuapp.com/?user=kuro-shiv&theme=tokyonight" alt="GitHub Streak Stats loading" style="width: 50%; height: 30%;">
+<img src="https://github-readme-streak-stats.herokuapp.com/?user=shivamdubey023&theme=tokyonight" alt="GitHub Streak Stats loading" style="width: 50%; height: 30%;">
 <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=shivamdubey023&layout=compact&theme=tokyonight" alt="GitHub Streak Stats loading" style="width: 50%; height: 30%;">
 </div>
 </section>
@@ -263,7 +258,7 @@
   <!-- Social -->
   <div class="social-icons">
     <a href="https://www.linkedin.com/in/shivam-kumar-dubey-970a87248" target="_blank"><i class="fa fa-linkedin"></i></a>
-    <a href="https://github.com/kuro-shiv" target="_blank"><i class="fa fa-github"></i></a>
+    <a href="https://github.com/shivamdubey023" target="_blank"><i class="fa fa-github"></i></a>
     <a href="https://x.com/shivam_twt023" target="_blank"><i class="fa fa-twitter"></i></a>
     <a href="https://www.instagram.com/greyman_life" target="_blank"><i class="fa fa-instagram"></i></a>
     <a href="https://www.youtube.com/@kuro_ank023" target="_blank"><i class="fa fa-youtube-play"></i></a>
